--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # WhatsApp Business API Configuration
 WHATSAPP_ACCESS_TOKEN=xxxx
-
 WHATSAPP_PHONE_NUMBER_ID=xxx
-WHATSAPP_WEBHOOK_VERIFY_TOKEN=xxx  
+WHATSAPP_WEBHOOK_VERIFY_TOKEN=xxx
+# App Secret from Meta Developer Console (for webhook signature verification)
+WHATSAPP_APP_SECRET=your_app_secret_here
 WHATSAPP_API_VERSION=v23.0
 FRONTEND_URL=http://localhost:5173
 # Application Configuration
@@ -13,3 +14,16 @@ NODE_ENV=development
 LOG_LEVEL=debug
 
 MONGODB_URI=mongodb://db:xxx@localhost/whatsapp-api-db?authSource=admin
+
+# Redis Configuration (for message queue)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Rate Limiting Configuration (optional)
+THROTTLE_SHORT_TTL=1000
+THROTTLE_SHORT_LIMIT=10
+THROTTLE_MEDIUM_TTL=10000
+THROTTLE_MEDIUM_LIMIT=50
+THROTTLE_LONG_TTL=60000
+THROTTLE_LONG_LIMIT=200
