--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -27,18 +28,23 @@
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/platform-ws": "^11.1.3",
     "@nestjs/swagger": "^7.1.17",
+    "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.5.0",
     "@nestjs/websockets": "^11.1.3",
     "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.6.2",
+    "bullmq": "^5.66.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mongoose": "^8.15.1",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
+    "winston": "^3.19.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
